crates/oxc_react_compiler/tests/snapshots/useActionState-dispatch-considered-as-non-reactive.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useActionState-dispatch-considered-as-non-reactive.js
---
import { c as _c } from "react/compiler-runtime";
import { useActionState } from "react";
function Component() {
	const $ = _c(1);
	const [, dispatchAction] = useActionState();
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const onSubmitAction = () => {
			dispatchAction();
		};
		t0 = <Foo onSubmitAction={onSubmitAction} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function Foo() {}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
