crates/oxc_react_compiler/tests/snapshots/useCallback-set-ref-value-dont-preserve-memoization.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useCallback-set-ref-value-dont-preserve-memoization.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePreserveExistingMemoizationGuarantees
import { useCallback, useRef } from "react";
function Component(props) {
	const $ = _c(2);
	const ref = useRef(null);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = (event) => {
			ref.current = event.target.value;
		};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const onChange = t0;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = <input onChange={onChange} />;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
