crates/oxc_react_compiler/tests/snapshots/useContext-read-context-in-callback-if-condition.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useContext-read-context-in-callback-if-condition.js
---
import { c as _c } from "react/compiler-runtime";
import { createContext, useContext } from "react";
import { Stringify } from "shared-runtime";
const FooContext = createContext({ current: true });
function Component(props) {
	const $ = _c(4);
	const foo = useContext(FooContext);
	let t0;
	if ($[0] !== foo) {
		const getValue = () => {
			if (foo.current) {
				return {};
			} else {
				return null;
			}
		};
		t0 = getValue();
		$[0] = foo;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const value = t0;
	let t1;
	if ($[2] !== value) {
		t1 = <Stringify value={value} />;
		$[2] = value;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
